# NeuroConnect

./: .gitignore  LICENSE  README.md  UserStories.md  app_shiny_neuroconnect.py  environment.yml  pyproject.toml  requirements.txt  requirements_shiny_neuroconnect.txt
.github/workflows/: testsuite.yml
App/: app_shiny_neuroconnect.py
App/docs/: ARCHITECTURE.md  README.md
data/: jhu_coordinates.csv
docs/: component_spec.md  functional_spec.md
examples/: DTI.csv  basic_visualization.py  custom_data_upload.py  custom_neuroconnect_data.csv  demo_visualization_data.csv  diagnosis.csv
src/NeuroConnect/: data_prep.py  data_preprocessing.py  module1.py
src/NeuroConnect/App/: requirements_shiny_neuroconnect.txt
src/NeuroConnect/App/docs/: API_REFERENCE.md
src/neuroconnect/: app_shiny_neuroconnect.py  data_prep.py  data_preprocessing.py  extract_coords.py  visualization_manager.py
src/neuroconnect/App/docs/: INSTALL.md
tests/: generate_data.py  synthetic_data.csv  test_app_shiny_neuroconnect.py  test_calculate_coords.py  test_data_prep.py  test_edge_conditions_and_inputs.py  test_extract_coords.py  test_module1.py  test_one_shot_single_point.py  test_pattern_edges_separator.py  test_smoke_plot_creation.py  test_visualization_manager.py  test_visualizator_manager.py
tmp/: UseCases.md
tmp/App/docs/: USER_GUIDE.md
tmp/Literature/: tech_review_netplotbrain
track_coordinates/: README.md  jhu_coordinates.csv
