[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "neuroconnect"
version = "0.0.0"
description = "Interactive 3D visualization of structural brain connectivity from diffusion tensor imaging for Alzheimer's research"
readme = "README.md"
authors = [
    {name = "Tina Zhao"},
    {name = "Carlos Pineda-Antunez"},
    {name = "Hongyu Mu"},
    {name = "Kenny Yi"}
]
classifiers = [
	"Intended Audience :: Science/Research",
	"Programming Language :: Python :: 3",
]
requires-python = ">=3.9,<=3.12"
dependencies = [
	"pandas>=2.3.0",
	"numpy",
	"pytest",
	"pytest-cov",
	"shiny",
	"shinywidgets",
	"plotly",
	"nibabel",
	"templateflow",
	"scikit-image",
	"scikit-learn",
]

[project.urls]
Homepage = "https://github.com/tinajzhao/NeuroConnect"
Issues = "https://github.com/tinajzhao/NeuroConnect/issues"


[tool.ruff.lint]
select = [
	"E", # pycodestyle: detect deviations from PEP8 rules
    # "W", # pycodestyle warnings: detect deviations from PEP8 suggestions
    "F", # Pyflakes: detect code errors, potential bugs
    # "B", # flake8-bugbear: detect antipatterns that can lead to bugs
    # "A", # flake8-builtins: detect overloading python builtins
    # "N", # pep8-naming: detect deviations from PEP naming conventions
    "I", # isort: better import organization
    # "D", # pydocstyle: check docstrings
    # "C4", # flake8-comprehensions: check for code simplifications with comprehensions
    # "SIM", # flake8-simplify: check for code simplifications
    # "UP", # pyupgrade: check for syntax improvments in new python versions
    # "C90", # McCabe complexity
]